force-app/main/default/objects/SEL_IntegrationMessage__mdt/SEL_IntegrationMessage__mdt.object-meta.xml
<CustomObject>
    <description>Configure the message body of an HTTP Request using this CMT.</description>
    <label>SEL Integration Message</label>
    <pluralLabel>SEL Integration Messages</pluralLabel>
</CustomObject>