force-app/main/default/objects/SEL_IntegrationMessage__mdt/fields/SEL_IsActive__c.field-meta.xml
<CustomField>
    <fullName>SEL_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true so the transformation logic will pick this configration up for processing. Otherwise, it will be ignored.</description>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>