force-app/main/default/objects/SEL_IntegrationMessage__mdt/fields/SEL_Order__c.field-meta.xml
<CustomField>
    <fullName>SEL_Order__c</fullName>
    <description>A custom way of ordering so the parts of the message body will remain readable when viewed from the list view.</description>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>