force-app/main/default/objects/SEL_IntegrationMessage__mdt/fields/SEL_SourceField__c.field-meta.xml
<CustomField>
    <fullName>SEL_SourceField__c</fullName>
    <description>The API of the sObject Field where the source data is coming from. If the SEL_SourceObject is set to STATIC, place the hardcoded value on this field.</description>
    <label>Source Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>