force-app/main/default/objects/SEL_IntegrationMessage__mdt/fields/SEL_SourceFieldType__c.field-meta.xml
<CustomField>
    <fullName>SEL_SourceFieldType__c</fullName>
    <label>Source Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sObject Field</fullName>
            </value>
            <value>
                <fullName>sObject Lookup</fullName>
            </value>
            <value>
                <fullName>Static</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>