force-app/main/default/objects/SEL_IntegrationMessage__mdt/fields/SEL_SourceObject__c.field-meta.xml
<CustomField>
    <fullName>SEL_SourceObject__c</fullName>
    <label>Source Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>