force-app/main/default/objects/SEL_IntegrationMessage__mdt/fields/SEL_TagretFieldCollectionItem__c.field-meta.xml
<CustomField>
    <fullName>SEL_TagretFieldCollectionItem__c</fullName>
    <inlineHelpText>Populate this only if the Message Type is XML and the Source Field is a relationship.</inlineHelpText>
    <label>Tagret Field Collection Item</label>
    <length>100</length>
    <type>Text</type>
</CustomField>