force-app/main/default/objects/SEL_IntegrationMessage__mdt/fields/SEL_TargetFieldLabel__c.field-meta.xml
<CustomField>
    <fullName>SEL_TargetFieldLabel__c</fullName>
    <description>The JSON node name in the generated message request.</description>
    <label>Target Field Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>