force-app/main/default/objects/SEL_IntegrationMessage__mdt/fields/SEL_TargetFieldType__c.field-meta.xml
<CustomField>
    <fullName>SEL_TargetFieldType__c</fullName>
    <label>Target Field Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>String</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Container</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>