force-app/main/default/objects/SEL_IntegrationMessage__mdt/fields/SEL_TargetParentNode__c.field-meta.xml
<CustomField>
    <fullName>SEL_TargetParentNode__c</fullName>
    <inlineHelpText>Populate this only if the Source Object is set to sObject Child Records. This represents the parent node in the JSON.</inlineHelpText>
    <label>Target Parent Node</label>
    <length>255</length>
    <type>Text</type>
</CustomField>