force-app/main/default/objects/SEL_IntegrationMessage__mdt/fields/SPEN_XMLNamespace__c.field-meta.xml
<CustomField>
    <fullName>SPEN_XMLNamespace__c</fullName>
    <description>Populate this if only message type is XML</description>
    <inlineHelpText>Applicable only for XML &amp; Container types</inlineHelpText>
    <label>XML Namespace</label>
    <type>TextArea</type>
</CustomField>