force-app/main/default/objects/SEL_IntegrationMessage__mdt/validationRules/SourceFieldMustNotBeBlankForStatic.validationRule-meta.xml
<ValidationRule>
    <fullName>SourceFieldMustNotBeBlankForStatic</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(SEL_SourceFieldType__c, &apos;Static&apos;)
&amp;&amp;
ISBLANK(SEL_SourceField__c)</errorConditionFormula>
    <errorMessage>The Source Field must be filled out if the Source Field Type is set to static.</errorMessage>
</ValidationRule>