force-app/main/default/objects/SEL_IntegrationMessage__mdt/validationRules/SourceObjectMustBeBlankForStatic.validationRule-meta.xml
<ValidationRule>
    <fullName>SourceObjectMustBeBlankForStatic</fullName>
    <active>false</active>
    <description>This rule ensures that the Source Object is blank whenever the Source Field Type field is set to Static.</description>
    <errorConditionFormula>ISPICKVAL(SEL_SourceFieldType__c, &apos;Static&apos;) 
&amp;&amp;
NOT(ISBLANK(SEL_SourceObject__c))</errorConditionFormula>
    <errorMessage>The Source Object must be blank if the Source Field Type is Static.</errorMessage>
</ValidationRule>