force-app/main/default/objects/SEL_IntegrationMessage__mdt/listViews/AllFields.listView-meta.xml
<ListView>
    <fullName>AllFields</fullName>
    <columns>SEL_IntegrationSettingId__c</columns>
    <columns>MasterLabel</columns>
    <columns>SEL_SourceObject__c</columns>
    <columns>SEL_SourceField__c</columns>
    <columns>SEL_SourceFieldType__c</columns>
    <columns>SEL_TargetFieldLabel__c</columns>
    <columns>SEL_TargetFieldType__c</columns>
    <columns>SEL_TargetParentNode__c</columns>
    <columns>SEL_TagretFieldCollectionItem__c</columns>
    <columns>SEL_IsActive__c</columns>
    <columns>SEL_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>