force-app/main/default/objects/SEL_IntegrationMessage__mdt/listViews/SDIFGetAffectedPremises.listView-meta.xml
<ListView>
    <fullName>SDIFGetAffectedPremises</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>SEL_IsActive__c</columns>
    <columns>SEL_Order__c</columns>
    <columns>SEL_SourceField__c</columns>
    <columns>SEL_SourceFieldType__c</columns>
    <columns>SEL_SourceObject__c</columns>
    <columns>SEL_TagretFieldCollectionItem__c</columns>
    <columns>SEL_TargetFieldLabel__c</columns>
    <columns>SEL_TargetFieldType__c</columns>
    <columns>SEL_TargetParentNode__c</columns>
    <columns>SPEN_XMLNamespace__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SEL_IntegrationSettingId__c</field>
        <operation>equals</operation>
        <value>SDIFGetAffectedPremises</value>
    </filters>
    <label>SDIFGetAffectedPremises</label>
</ListView>